--- a/ex14_prática copy/estilo.css
+++ b/ex14_prática copy/estilo.css
@@ -21,6 +21,12 @@ section{
     border-radius: 10px;
     box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.664);
 }
+div#foto img {
+    max-width: 250px;
+    max-height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
 footer{
     text-align: center;
     color: white;
